compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for : 1 .. 10 by 3 end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..26): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..26): []
        For@(FileId(1), 0..26)
          Literal@(FileId(1), 6..7): Integer(1)
          Literal@(FileId(1), 11..13): Integer(10)
          Literal@(FileId(1), 17..18): Integer(3)

