compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-3.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for : wah end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..17): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..17): []
        For@(FileId(1), 0..17): implicit
          Name@(FileId(1), 6..9): "wah"@(FileId(1), 6..9), undeclared

