compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-6.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for decreasing : 1 .. 10 end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..32): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..32): []
        For@(FileId(1), 0..32)
          Literal@(FileId(1), 17..18): Integer(1)
          Literal@(FileId(1), 17..18): Integer(1)

