compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-7.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "var implied : int for decreasing : implied end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..50): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..50): []
        StmtItem@(FileId(1), 0..17): ItemId(0)
          ConstVar@(FileId(1), 0..17): var "implied"@(FileId(1), 4..11)
            Primitive@(FileId(1), 14..17): Int
        For@(FileId(1), 18..50): decreasing implicit
          Name@(FileId(1), 35..42): "implied"@(FileId(1), 4..11)
error in file FileId(1) at 35..42: `decreasing` for-loops cannot use implicit range bounds
| error in file FileId(1) for 35..42: range bounds are implied from here
| note in file FileId(1) for 22..32: `decreasing` for-loop specified here
| info: `decreasing` for-loops can only use explicit range bounds (e.g. `1 .. 2`)

