compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-8.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for : end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..13): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..13): []
        For@(FileId(1), 0..13): explicit
error in file FileId(1) at 6..9: unexpected token
| error in file FileId(1) for 6..9: expected expression, but found ‘end’

