compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt-9.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for decreasing : end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..24): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..24): []
        For@(FileId(1), 0..24): decreasing explicit
error in file FileId(1) at 17..20: unexpected token
| error in file FileId(1) for 17..20: expected expression, but found `end`

