compiler/toc_hir_lowering/tests/snapshots/lowering__lower_for_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "for : 1 .. 10 end for"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..21): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..21): []
        For@(FileId(1), 0..21): explicit
          Literal@(FileId(1), 6..7): Integer(1)
          Literal@(FileId(1), 11..13): Integer(10)

