compiler/toc_hir_lowering/tests/snapshots/lowering__lower_formals_intersperse_missing-2.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "procedure args(sa, , ba: int) end args"
---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..38): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..38): []
        StmtItem@(FileId(1), 0..38): ItemId(0)
          Subprogram@(FileId(1), 0..38): "args"@(FileId(1), 10..14) [
            "sa"@(FileId(1), 15..17),
            <missing>,
            "ba"@(FileId(1), 21..23)
          ]
            Primitive@(FileId(1), 25..28): Int
            Primitive@(FileId(1), 25..28): Int
            Primitive@(FileId(1), 25..28): Int
            Void@(FileId(1), 0..29)
            StmtBody@(FileId(1), 30..30): ["sa"@(FileId(1), 15..17), "ba"@(FileId(1), 21..23)]
error in file FileId(1) at 19..20: unexpected token
| error in file FileId(1) for 19..20: expected identifier, but found `,`

