compiler/toc_hir_lowering/tests/snapshots/lowering__lower_formals_intersperse_missing-4.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: "procedure args(a, , , , b, : int) end args"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..42): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..42): []
        StmtItem@(FileId(1), 0..42): ItemId(0)
          Subprogram@(FileId(1), 0..42): "args"@(FileId(1), 10..14) [
            "a"@(FileId(1), 15..16),
            "<unnamed>"@(dummy),
            "<unnamed>"@(dummy),
            "<unnamed>"@(dummy),
            "b"@(FileId(1), 24..25)
          ]
            Primitive@(FileId(1), 29..32): Int
            Primitive@(FileId(1), 29..32): Int
            Primitive@(FileId(1), 29..32): Int
            Primitive@(FileId(1), 29..32): Int
            Primitive@(FileId(1), 29..32): Int
            StmtBody@(FileId(1), 34..34): ["a"@(FileId(1), 15..16), "<unnamed>"@(dummy), "<unnamed>"@(dummy), "<unnamed>"@(dummy), "b"@(FileId(1), 24..25)]
error in file FileId(1) at 18..19: unexpected token
| error in file FileId(1) for 18..19: expected identifier, but found ‘,’
error in file FileId(1) at 20..21: unexpected token
| error in file FileId(1) for 20..21: expected identifier, but found ‘,’
error in file FileId(1) at 22..23: unexpected token
| error in file FileId(1) for 22..23: expected identifier, but found ‘,’
error in file FileId(1) at 27..28: unexpected token
| error in file FileId(1) for 27..28: expected identifier, but found ‘:’

